tests/semantic/valid/08_r2_builtin_pi.hulk
print(PI);
print(sin(1));
