tests/semantic/invalid/02_r1_redefine_pi.hulk
let PI = 1 in print(PI);
